--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 <body>	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
-    <img src="ECHOAX.png" width="90px" height="50px" alt="">
+    <img src="https://imgur.com/sCp6LdA" width="90px" height="50px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
