--- a/BG-fake.html
+++ b/BG-fake.html
@@ -11,10 +11,10 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title></title>
 </head>
-<body background="BG-Fake-news.png">
+<body background="https://i.imgur.com/MjBOCeH.png">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
-    <img src="ECHOAX.png" width="90px" height="50px" alt="">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search" class="fas fa-search fa-2x "></i>
+    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
     
       <li class="nav-item ">
-        <a class="nav-link" href="#">NEW</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="#">POPULAR</a>
+        <a class="nav-link" href="new.html">NEW</a>
       </li>
       <li class="nav-item active ">
+        <a class="nav-link" href="popular.html">POPULAR</a>
+      </li>
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">ABOUT US</a>
+        <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
     <div class="search-form">
@@ -44,7 +44,7 @@
     </div> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-      <ul class="dropdown-menu dropdown-menu-right">          
+      <ul class="dropdown-menu dropdown-menu-right">         
         <li>
           <form action="/examples/actions/confirmation.php" method="post">
             <div class="form-group">
@@ -70,13 +70,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>POLITICS</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>POLITICS</center></div></a>
     </div>
     <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>ECONONICS</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>ECONOMICS</center></div></a>
     </div>
      <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>HEALTH</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>HEALTH</center></div></a>
     </div>
   </div>
  </div>
@@ -84,13 +84,13 @@
   <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>CRIME</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>CRIME</center></div></a>
     </div>
     <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>TECHNOLOGY</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>TECHNOLOGY</center></div></a>
     </div>
     <div class="col-md-4 col-sm-6 col-12" >
-      	<div class="card cardbox"><center>SPORTS</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>SPORT</center></div></a>
     </div>
   </div>
  </div>
@@ -98,13 +98,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>ENTERTAINMENT</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>ENTERTAINMENT</center></div></a>
     </div>
     <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>EDUCATION</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>EDUCATION</center></div></a>
     </div>
      <div class="col-md-4 col-sm-6 col-12">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<a href="polithic.html"><div class="card cardbox black"><center>SCIENCE</center></div></a>
     </div>
   </div>
 </div>
