--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="http://code.jquery.com/jquery-3.4.0.js"integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -9,8 +10,15 @@
   <link rel="stylesheet" type="text/css" href="BG.css">
   <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
   <title></title>
+  <style>
+    body{
+      background-image:url(https://i.imgur.com/Fg7WsNm.png);
+      background-position: center top;
+      background-repeat:repeat;
+    }
+  </style>
 </head>
-<body background="https://i.imgur.com/2LFNL5m.png">
+<body>  
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
@@ -33,7 +41,7 @@
       </li>
       <li class="nav-item ">
         <a class="nav-link" href="aboutus.html">ABOUT US</a>
-      </li>      
+      </li>       
     </ul>
     <div class="search-form">
       <form>
@@ -55,9 +63,12 @@
             </form>
         </li>
       </ul>
-    
   </div>
 </nav>
-<script src="bgjs.js"></script>
+<center><img src="https://i.imgur.com/glax40v.png" width="50%" style="height: 25%"></center>
+<div class="w" style="font-size: 30px"><center>CREATED BY<br>MR.KANTACHAT JANYA<br>MR.SARATOON KHUNSANIT</center></div>
+<div class="w" style="line-height: 2; font-size: 30px;"><center>THIS WEBSITE IS PART OF CSS227 WEB PROGRAMMING.<br>KING MONGKUT'S UNIVERSITY OF TECHNOLOGY THONBURI</center></div>
+
+  <script src="bgjs.js"></script>
 </body>
 </html>
