--- a/polithic.html
+++ b/polithic.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<script src="http://code.jquery.com/jquery-3.4.0.js"integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="BG.css">
-	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title></title>
 </head>
-<body background="https://i.imgur.com/2LFNL5m.png">
+<body background="https://i.imgur.com/MjBOCeH.png" >
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
@@ -60,35 +60,43 @@
     
   </div>
 </nav>
-<div id="headca"><center>CATEGORY</center></div>
-<div id="fake" class="topic"><center><i id="searchbtn" class="fas fa-search"></i>PHISHING</center></div>
-<div class="search-topic">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
+<div class="htop">
+<img src="https://i.imgur.com/Dhhew9n.jpg"  width="100%">
+<div class="topleft p" >FAKE NEWS</div>
+<div class="bottomleft w" ><br>POLITICS</div>
+</div>
+<div class="container">
+  <div class="row">
+     <div class="col-3 card backp" style="height: 400px"><a href="politic1.html">
+      <img src="https://i.imgur.com/hHQOHIb.jpg" height="250px" style="width: 100%">
+      <div class="container">
+        <header class="black"><b>TOPIC1</b></header>
+        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
+        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
+        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+      </div>
     </div>
-<div class="column">
-<a href="phisingp1.html">
-<div class="card flex-row flex-wrap">
-  <img class="card-img-left" src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">WWW.XXXXXX.COM</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-  </div>
-</div>
-</a>
-</div>
-<br/>
-<div class="column">
-<a href="phisingp1.html">
-<div class="card flex-row flex-wrap">
-  <img class="card-img-left" src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">WWW.XXXXXX.COM</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-  </div>
-</div>
-</a>
+    <div class="col-1"></div>  
+    <div class="col-3 card backp" style="height: 400px"><a href="">
+      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
+      <div class="container">
+        <header class="black"><b>TOPIC1</b></header>
+        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
+        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
+        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+      </div>
+    </div>
+    <div class="col-1"></div>   
+    <div class="col-3 card backp" style="height: 400px"><a href="">
+      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
+      <div class="container">
+        <header class="black"><b>TOPIC1</b></header>
+        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
+        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
+        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+      </div>
+    </div>
+   </div> 
 </div>
 <script src="bgjs.js"></script>
 </body>
