--- a/BG-Sign.html
+++ b/BG-Sign.html
@@ -11,10 +11,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<title></title>
 </head>
-<body background="BG-sign-up.png">
+<body background="https://i.imgur.com/TniTm3s.png">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
-    <img src="ECHOAX.png" width="90px" height="50px" alt="">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,20 +22,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search" class="fas fa-search fa-2x "></i>
-    
-      <li class="nav-item ">
-        <a class="nav-link" href="#">NEW</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="#">POPULAR</a>
+    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+    <li class="nav-item ">
+        <a class="nav-link" href="new.html">NEW</a>
       </li>
       <li class="nav-item active ">
+        <a class="nav-link" href="popular.html">POPULAR</a>
+      </li>
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">ABOUT US</a>
-      </li>      
+        <a class="nav-link" href="aboutus.html">ABOUT US</a>
+      </li>    
     </ul>
     <div class="search-form">
       <form>
@@ -44,7 +43,7 @@
     </div> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-      <ul class="dropdown-menu dropdown-menu-right">          
+      <ul class="dropdown-menu dropdown-menu-right">         
         <li>
           <form action="/examples/actions/confirmation.php" method="post">
             <div class="form-group">
@@ -104,7 +103,7 @@
     </div>
     </div>
 
-      <button type="submit" class="signupbtn">Sign Up</button>
+      <button type="submit" class="signupbtn" name="signbtn">Sign Up</button>
   </div>
 </form>
 <script src="bgjs.js"></script>
