--- a/BG3c.html
+++ b/BG3c.html
@@ -11,10 +11,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<title></title>
 </head>
-<body background="BG-3C.png">	
+<body background="https://i.imgur.com/gaFKvWi.png" style="background-position: center;">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
-    <img src="ECHOAX.png" width="90px" height="50px" alt="">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search" class="fas fa-search fa-2x "></i>
+    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
     
       <li class="nav-item ">
-        <a class="nav-link" href="#">NEW</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="#">POPULAR</a>
+        <a class="nav-link" href="new.html">NEW</a>
       </li>
       <li class="nav-item active ">
+        <a class="nav-link" href="popular.html">POPULAR</a>
+      </li>
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">ABOUT US</a>
+        <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
     <div class="search-form">
@@ -44,7 +44,7 @@
     </div> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-      <ul class="dropdown-menu dropdown-menu-right">          
+      <ul class="dropdown-menu dropdown-menu-right">         
         <li>
           <form action="/examples/actions/confirmation.php" method="post">
             <div class="form-group">
@@ -64,15 +64,15 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12">
-    	<a href="BG-fake.html"><img src="fake.png" style="width: 100%" >
+    	<a href="BG-fake.html"><img src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
       		<div class="centered w"><center>FAKE NEWS</center></div></a>
     </div>
     <div class="col-md-4 col-sm-6 col-12">
-      <a href="BG-Hoax.html"><img src="Hoax.png" style="width: 100%" >
+      <a href="BG-Hoax.html"><img src="https://i.imgur.com/RnK3ORD.jpg" style="width: 100%" >
       	<div class="centered w"><center>HOAX</center></div></a>
     </div>
      <div class="col-md-4 col-sm-6 col-12">
-      <a href="BG-Phising.html"><img src="Phishing.png" style="width: 100%" >
+      <a href="BG-Phising.html"><img src="https://i.imgur.com/TBu6Oc0.jpg" style="width: 100%" >
       	<div class="centered w"><center>PHISHING</center></div></a>
     </div>
   </div>
