--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<title></title>
   <style>
     body{
-      background-image:url(ECHOAX-2.png),url(BG-3C.png);
+      background-image:url(https://i.imgur.com/glax40v.png),url(https://i.imgur.com/Fg7WsNm.png);
       background-position: top center;
       background-repeat: no-repeat,repeat;
     }
@@ -21,7 +21,7 @@
 <body>	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" title="source: imgur.com" width="90px" height="50px" alt="">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -29,19 +29,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search" class="fas fa-search fa-2x "></i>
+    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
     
       <li class="nav-item ">
-        <a class="nav-link" href="#">NEW</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="#">POPULAR</a>
+        <a class="nav-link" href="new.html">NEW</a>
       </li>
       <li class="nav-item active ">
+        <a class="nav-link" href="popular.html">POPULAR</a>
+      </li>
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">ABOUT US</a>
+        <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
     <div class="search-form">
