--- a/navlogin.html
+++ b/navlogin.html
@@ -14,7 +14,7 @@
 <body background="BG-3C.png">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
-    <img src="ECHOAX.png" width="90px" height="50px" alt="">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search" class="fas fa-search fa-2x "></i>
+    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
     
       <li class="nav-item ">
-        <a class="nav-link" href="#">NEW</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="#">POPULAR</a>
+        <a class="nav-link" href="new.html">NEW</a>
       </li>
       <li class="nav-item active ">
+        <a class="nav-link" href="popular.html">POPULAR</a>
+      </li>
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">ABOUT US</a>
+        <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
     <div class="search-form">
