--- a/popular.html
+++ b/popular.html
@@ -22,6 +22,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+    
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
@@ -58,6 +59,45 @@
     
   </div>
 </nav>
+<div class="htop">
+<img src="https://i.imgur.com/Dhhew9n.jpg"  width="100%" >
+<div class="topleft w">POPULAR</div>
+<div class="bottomleft w" ><br>SEE WHAT ARE NEW LIES HERE.</div>
+</div>
+
+ <div class="container">
+  <div class="row">
+     <div class="col-3 card backp" style="height: 400px"><a href="politic1.html">
+      <img src="https://i.imgur.com/hHQOHIb.jpg" height="250px" style="width: 100%">
+      <div class="container">
+        <header class="black"><b>TOPIC1</b></header>
+        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
+        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
+        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+      </div>
+    </div>
+    <div class="col-1"></div>  
+    <div class="col-3 card backp" style="height: 400px"><a href="">
+      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
+      <div class="container">
+        <header class="black"><b>TOPIC1</b></header>
+        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
+        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
+        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+      </div>
+    </div>
+    <div class="col-1"></div>   
+    <div class="col-3 card backp" style="height: 400px"><a href="">
+      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
+      <div class="container">
+        <header class="black"><b>TOPIC1</b></header>
+        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
+        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
+        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+      </div>
+    </div>
+   </div> 
+</div>
 <script src="bgjs.js"></script>
 </body>
 </html>
