--- a/BG-Hoax.html
+++ b/BG-Hoax.html
@@ -27,10 +27,10 @@
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item active ">
+      <li class="nav-item ">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item active">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
@@ -61,21 +61,23 @@
   </div>
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
-<div id="fake" class="topic"><center><i id="searchbtn" class="fas fa-search"></i>HOAX</center></div>
-<div class="search-topic">
-      <form>
+<div>
+  <form class="search-topic">
         <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div>
+  </form>
+  <div id="hoax" class="topic"><center><i id="searchbtn" class="fas fa-search"></i>HOAX</center></div>
+
+</div>
+
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>APRIL FOOL'S DAY</center></div>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
-     <div class="col-md-4 col-sm-6 col-12">
+     <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
   </div>
@@ -83,13 +85,13 @@
  <br/>
   <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
-    <div class="col-md-4 col-sm-6 col-12" >
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
   </div>
@@ -97,13 +99,13 @@
  <br/>
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>EDUCATION</center></div>
     </div>
-     <div class="col-md-4 col-sm-6 col-12">
+     <div class="col-lg-4  col-12 card">
       	<div class="card cardbox"><center>SCIENCE</center></div>
     </div>
   </div>
