--- a/BG-fake.html
+++ b/BG-fake.html
@@ -19,7 +19,6 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
@@ -27,10 +26,10 @@
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item active ">
+      <li class="nav-item ">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item active">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
@@ -57,54 +56,53 @@
             </form>
         </li>
       </ul>
-    
   </div>
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
-<div id="fake" class="topic"><center><i id="searchbtn" class="fas fa-search"></i>FAKE NEWS</center></div>
-<div class="search-topic">
-      <form>
+<div>
+  <form class="search-topic">
         <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div>
+  </form>
+  <div id="fake" class="topic"><center><i id="searchbtn" class="fas fa-search"></i>FAKE NEWS</center></div> 
+  </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>POLITICS</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>POLITICS</center></div></a>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>ECONOMICS</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>ECONOMICS</center></div></a>
     </div>
-     <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>HEALTH</center></div></a>
+     <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>HEALTH</center></div></a>
     </div>
   </div>
  </div>
  <br/>
   <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>CRIME</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>CRIME</center></div></a>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>TECHNOLOGY</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>TECHNOLOGY</center></div></a>
     </div>
-    <div class="col-md-4 col-sm-6 col-12" >
-      	<a href="polithic.html"><div class="card cardbox black"><center>SPORT</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>SPORT</center></div></a>
     </div>
   </div>
  </div>
  <br/>
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>ENTERTAINMENT</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>ENTERTAINMENT</center></div></a>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>EDUCATION</center></div></a>
+    <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>EDUCATION</center></div></a>
     </div>
-     <div class="col-md-4 col-sm-6 col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>SCIENCE</center></div></a>
+     <div class="col-lg-4  col-12 card">
+      	<a href="polithic.html"><div class=" cardbox black"><center>SCIENCE</center></div></a>
     </div>
   </div>
 </div>
