--- a/adminprofile.html
+++ b/adminprofile.html
@@ -6,12 +6,12 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="BG.css">
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title></title>
 </head>
-<body background="https://i.imgur.com/2LFNL5m.png" class="bg">
+<body background="https://i.imgur.com/Fg7WsNm.png" class="bg">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
@@ -27,10 +27,10 @@
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
@@ -42,54 +42,60 @@
         <input type="text" name="" placeholder="SEARCH">
       </form>
     </div> 
-  <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
-  <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-      <ul class="dropdown-menu dropdown-menu-right">         
+  <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
+      <ul class="dropdown-menu dropdown-menu-right bb">          
         <li>
-          <form action="/examples/actions/confirmation.php" method="post">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Username" required="required">
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" placeholder="Password" required="required">
-            </div>
-              <input type="submit" class="btn btn-primary btn-block" value="Login">
-            </form>
+          <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
+          <div class="w"><center>USERNAME</center></div>
+          <div href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</div>
+          <div href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</div>
+           <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
         </li>
       </ul>
-    
   </div>
 </nav>
-<div id="headca"><center>CATEGORY</center></div>
-<div>
-  <form class="search-topic">
-    <input type="text" name="" placeholder="SEARCH">
-  </form>
-<div id="phising" class="topic"><center><i id="searchbtn" class="fas fa-search"></i>PHISHING</center></div>
-</div>      
-   
-<div class="column">
-<a href="phisingp1.html">
-<div class="card flex-row flex-wrap backphish">
-  <img src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">WWW.XXXXXX.COM</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
+<div class=" container box">
+	<div class="row">
+  <div class="col-25">
+		<img src="Phishing.png" width="70%" height="70%" style="float: left; padding-top: 10px;">
+  </div> 
+  <div class="col-75">
+		<h class="w"><r>ADMIN</r><br><n> Firstname Lastname </n><br><m> motto. </m></h>
+	</div> 
+  </div>
+  <div class="row">
+    <div class="col-25">
+	   <div class="card" style="float: left;">
+		  <hd>GENDER</hd>
+		  xxxxxx
+		  <hd>BIRTH DATE</hd>
+		  xx xx xx
+		  <hd>LOCATION</hd>
+		  xxxxxxxxxxxxxxxx
+		  <hd>PHONE NUMBER</hd>
+		  +00 000000000
+		  <center><input type="button" name="edit" value="EDIT PROFILE"></center>
+	   </div>
+    </div>
+    <div class="col-75">
+	<div class="tab" >
+  		<button class="tablinks active" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</button>
+  		<button class="tablinks" onclick="opentab(event, 'STAT')">STAT</button>
+      <a href="ECHO.html"><button class="w" style="float: right; background-color: red; border-radius: 10px;">ECHO</button></a>
+      <a href="userecho.html"><button class="w" style="float: right; background-color: yellow; border-radius: 10px;">USER'S ECHO</button></a>
+  		
+	</div>
+	<div id="OVERVIEW" class="tabcontent" style="display: block; ">
+  	<h3>E-mail</h3>
+  	<p>XXXXXX@XXXX.COM</p>
+	</div>
+
+  <div id="STAT" class="tabcontent">
+   <h3>Paris</h3>
+    <p>Paris is the capital of France.</p> 
   </div>
 </div>
-</a>
 </div>
-<br/>
-<div class="column">
-<a href="phisingp1.html">
-<div class="card flex-row flex-wrap backphish">
-  <img src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">WWW.XXXXXX.COM</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-  </div>
-</div>
-</a>
 </div>
 <script src="bgjs.js"></script>
 </body>
