--- a/main.html
+++ b/main.html
@@ -10,15 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="BG.css">
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<title></title>
-  <style>
-    body{
-      background-image:url(https://i.imgur.com/glax40v.png),url(https://i.imgur.com/Fg7WsNm.png);
-      background-position: top center;
-      background-repeat: no-repeat,repeat;
-    }
-  </style>
 </head>
-<body>	
+<body class="bgmain">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
