--- a/BG-profile.html
+++ b/BG-profile.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<title></title>
 </head>
-<body background="https://i.imgur.com/Fg7WsNm.png">	
+<body background="https://i.imgur.com/Fg7WsNm.png" class="bg">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
@@ -52,41 +52,48 @@
            <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
         </li>
       </ul>
-    
   </div>
 </nav>
-<div class="box" style="margin: 100px">
-	<div style="padding-left: 60px;">
-		<img src="Phishing.png" width="20%" height="20%" style="float: left; padding-top: 10px;">
+<div class=" container box">
+	<div class="row">
+  <div class="col-25">
+		<img src="Phishing.png" width="150px" height="150px" style="float: left; border-radius: 50%;">
+  </div> 
+  <div class="col-75">
 		<h class="w"><r> Username </r><br><n> Firstname Lastname </n><br><m> motto. </m></h>
-	</div>
-	<div class="card" style="float: left;">
-		<hd>GENDER</hd>
-		xxxxxx
-		<hd>BIRTH DATE</hd>
-		xx xx xx
-		<hd>LOCATION</hd>
-		xxxxxxxxxxxxxxxx
-		<hd>PHONE NUMBER</hd>
-		+00 000000000
-		<center><input type="button" name="edit" value="EDIT PROFILE"></center>
-	</div>
-	<div class="tab" style="padding-left: 12px;">
+	</div> 
+  </div>
+  <div class="row">
+    <div class="col-25">
+	   <div class="card" style="float: left;">
+		  <hd>GENDER</hd>
+		  xxxxxx
+		  <hd>BIRTH DATE</hd>
+		  xx xx xx
+		  <hd>LOCATION</hd>
+		  xxxxxxxxxxxxxxxx
+		  <hd>PHONE NUMBER</hd>
+		  +00 000000000
+		  <center><input type="button" name="edit" value="EDIT PROFILE"></center>
+	   </div>
+    </div>
+    <div class="col-75">
+	<div class="tab">
   		<button class="tablinks active" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</button>
   		<button class="tablinks" onclick="opentab(event, 'STAT')">STAT</button>
-  		<button href="ECHO.html" class="w" style="float: right; background-color: red;">ECHO</button>
+  		<a href="ECHO.html"><button class="w" style="float: right; background-color: red; border-radius: 10px;">ECHO</button></a>
 	</div>
 	<div id="OVERVIEW" class="tabcontent" style="display: block; ">
   	<h3>E-mail</h3>
   	<p>XXXXXX@XXXX.COM</p>
 	</div>
 
-<div id="STAT" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p> 
+  <div id="STAT" class="tabcontent">
+   <h3>Paris</h3>
+    <p>Paris is the capital of France.</p> 
+  </div>
 </div>
-
-
+</div>
 </div>
 <script src="bgjs.js"></script>
 </body>
