--- a/BG3c.html
+++ b/BG3c.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 	<title></title>
 </head>
-<body background="https://i.imgur.com/gaFKvWi.png" style="background-position: center;">	
+<body background="https://i.imgur.com/gaFKvWi.png" class="bg">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
@@ -27,10 +27,10 @@
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item active ">
+      <li class="nav-item">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item active">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
@@ -61,7 +61,7 @@
   </div>
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
-<div class="container">
+
   <div class="row">
     <div class="col-md-4 col-sm-6 col-12">
     	<a href="BG-fake.html"><img src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
@@ -76,7 +76,7 @@
       	<div class="centered w"><center>PHISHING</center></div></a>
     </div>
   </div>
-</div>
+
 <script src="bgjs.js"></script>
 </body>
 </html>
