--- a/polithic.html
+++ b/polithic.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title></title>
 </head>
-<body background="https://i.imgur.com/MjBOCeH.png" >
+<body background="https://i.imgur.com/MjBOCeH.png" class="bg" >
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="main.html">
     <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
@@ -61,13 +61,13 @@
   </div>
 </nav>
 <div class="htop">
-<img src="https://i.imgur.com/Dhhew9n.jpg"  width="100%">
+<img src="https://i.imgur.com/Dhhew9n.jpg"  width="100%" height="300px">
 <div class="topleft p" >FAKE NEWS</div>
 <div class="bottomleft w" ><br>POLITICS</div>
 </div>
 <div class="container">
   <div class="row">
-     <div class="col-3 card backp" style="height: 400px"><a href="politic1.html">
+     <div class="col-4 card backp" style="height: 400px"><a href="politic1.html">
       <img src="https://i.imgur.com/hHQOHIb.jpg" height="250px" style="width: 100%">
       <div class="container">
         <header class="black"><b>TOPIC1</b></header>
@@ -77,7 +77,7 @@
       </div>
     </div>
     <div class="col-1"></div>  
-    <div class="col-3 card backp" style="height: 400px"><a href="">
+    <div class="col-4 card backp" style="height: 400px"><a href="">
       <img src="_DSC7236.jpg" height="250px" style="width: 100%">
       <div class="container">
         <header class="black"><b>TOPIC1</b></header>
@@ -86,16 +86,7 @@
         <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
       </div>
     </div>
-    <div class="col-1"></div>   
-    <div class="col-3 card backp" style="height: 400px"><a href="">
-      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
-      <div class="container">
-        <header class="black"><b>TOPIC1</b></header>
-        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
-        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
-        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
-      </div>
-    </div>
+    
    </div> 
 </div>
 <script src="bgjs.js"></script>
