--- a/BG3c.html
+++ b/BG3c.html
@@ -9,20 +9,21 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="BG.css">
 	<link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
+  <script src="bgjs.js" defer></script>
 	<title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body background="https://i.imgur.com/gaFKvWi.png" class="bg">	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
-  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  <a class="navbar-brand" href="main.html">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
+  </a>
+  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
     
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
@@ -62,21 +63,21 @@
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
 
-  <div class="row">
-    <div class="col-md-4 col-sm-6 col-12">
-    	<a href="BG-fake.html"><img src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
-      		<div class="centered w"><center>FAKE NEWS</center></div></a>
+  <div class="row no-gutters">
+    <div class="col-md-4 col-12" >
+    	<a href="BG-fake.html"><img id="" src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
+      		<div class="centered w"><center>FAKENEWS</center></div></a>
     </div>
-    <div class="col-md-4 col-sm-6 col-12">
-      <a href="BG-Hoax.html"><img src="https://i.imgur.com/RnK3ORD.jpg" style="width: 100%" >
+    <div class="col-md-4 col-12">
+      <a href="BG-Hoax.html"><img id="" src="https://i.imgur.com/RnK3ORD.jpg" style="width: 100%" >
       	<div class="centered w"><center>HOAX</center></div></a>
     </div>
-     <div class="col-md-4 col-sm-6 col-12">
-      <a href="BG-Phising.html"><img src="https://i.imgur.com/TBu6Oc0.jpg" style="width: 100%" >
+     <div class="col-md-4 col-12">
+      <a href="BG-Phising.html"><img id="" src="https://i.imgur.com/TBu6Oc0.jpg" style="width: 100%" >
       	<div class="centered w"><center>PHISHING</center></div></a>
     </div>
   </div>
 
-<script src="bgjs.js"></script>
+
 </body>
 </html>
