--- a/userinside.html
+++ b/userinside.html
@@ -13,7 +13,7 @@
 	<title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body background="https://i.imgur.com/Fg7WsNm.png" class="bg">	
+<body background="https://i.imgur.com/MjBOCeH.png" class="bg">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -55,28 +55,55 @@
       </ul>
   </div>
 </nav>
-<div id="headca"><center> USER'S ECHO</center></div>
-<div class="column">
-<a href="usertopic.html">
-<div class="card flex-row flex-wrap backp">
-  <img class="card-img-left" src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">TOPIC 1</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
+<div class="w" style="font-size: 50px;"><center>Username'S ECHO</center></div>
+<div class="container" style="width: 90%">
+  <div class="row">
+    <div class="col-50">
+      <div class="w" style="font-size: 30px;"><center>PICTURE</center></div>
+      <center><img src="https://i.imgur.com/hHQOHIb.jpg" width="100%" style="padding-top: 50px"></center>
+    </div>
+    <div class="col-50" style="background-color: #2e2e2e;">
+      <div class="container" style="padding:30px;">
+        <div class="row w">
+          <div class="col-30u">
+            TOPIC
+          </div>
+          <div class="col-70u ">
+            Topic1
+          </div>
+        </div>
+     
+        <div class="row">
+          <div class="col-30u w">
+            CATEGORY
+          </div>
+          <div class="col-70u">
+            <x style="color: #b1b1ff;"> FAKE NEWS </x> <x class="w"> politics</x>
+          </div>
+        </div>
+        <div class="row w">
+          <div class="col-30u w">
+            DESCRIPTION
+          </div>
+        </div>
+        <p id="usernews" class="w">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+        <div class="row" style="padding-top: 200px;">
+        <div class="col-30u w">
+          REFERNENCE
+        </div>
+        <div class="col-70u w">
+          www.xxxxxxxx.com
+        </div>
+        </div>
+      <center style="padding-top: 10px;">
+      <button class="greenbtn w">ACCEPT</button>
+      <button class="redbtn w">DELETE</button>
+      <button class="yelbtn w">BACK</button>
+      </center>
+      </div>
+     </div>
+    </div>
   </div>
-</div>
-</a>
-</div>
-<div class="column">
-<a href="phisingp1.html">
-<div class="card flex-row flex-wrap backphish">
-  <img class="card-img-left" src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">WWW.XXXXXXXXXXXXXXXXXXXX.COM</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-  </div>
-</div>
-</a>
 </div>
 
 </body>
