--- a/politic1.html
+++ b/politic1.html
@@ -9,20 +9,22 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="BG.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <script src="bgjs.js" defer></script>
 	<title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body background="https://i.imgur.com/MjBOCeH.png">
+<body background="https://i.imgur.com/MjBOCeH.png" class="bg">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  <a class="navbar-brand" href="main.html">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
+  </a>
+  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+
     
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
@@ -78,6 +80,6 @@ XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 <div><center><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></center></div> 
  
 
-<script src="bgjs.js"></script>
+
 </body>
 </html>
